pequenas alterações de estilo

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -36,7 +36,11 @@
     <header>
       <!--Imagem logo-->
       <a href="#inicio" draggable="false">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
+        <img
+          src="Imagens/logo sem fundo.png"
+          alt="Logo Tá que Tá"
+          draggable="false"
+        />
       </a>
       <!--Menu de acesso a outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
@@ -159,7 +163,11 @@
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
+          ><img
+            src="Imagens/inputNameIcon.png"
+            alt="Nome"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="text"
@@ -172,7 +180,11 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
+          <img
+            src="Imagens/senhaIcon.png"
+            alt="Senha"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="password"
@@ -275,7 +287,12 @@
       </div>
     </div>
     <!--Botão de voltar ao topo-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
+    <a
+      id="botão-voltar"
+      href="#inicio"
+      title="Voltar para o início"
+      draggable="false"
+    >
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
@@ -336,7 +353,9 @@
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" draggable="false"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">
+        Vitorezy
+      </a>
     </footer>
   </body>
 </html>
