--- a/artistas.html
+++ b/artistas.html
@@ -35,7 +35,11 @@
     <header>
       <!--Topo da página-->
       <a href="Quem somos.html" draggable="false">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
+        <img
+          src="Imagens/logo sem fundo.png"
+          alt="Logo Tá que Tá"
+          draggable="false"
+        />
       </a>
       <!--links de acesso para outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
@@ -135,8 +139,11 @@
         <!--container com as caixas de cada artista-->
         <div id="artista1" style="background-image: url(Imagens/wallpaper.jpg)">
           <div class="autor-identificação">
-            <img src="Imagens/usuário_icon_nav.png" alt="Foto do autor"
-            draggable="false" />
+            <img
+              src="Imagens/usuário_icon_nav.png"
+              alt="Foto do autor"
+              draggable="false"
+            />
             <h2>Nome do Artista</h2>
           </div>
           <div class="imagem_do_artista"></div>
@@ -239,7 +246,11 @@
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
+          ><img
+            src="Imagens/inputNameIcon.png"
+            alt="Nome"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="text"
@@ -252,7 +263,11 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
+          <img
+            src="Imagens/senhaIcon.png"
+            alt="Senha"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="password"
@@ -355,7 +370,12 @@
       </div>
     </div>
     <!--Voltar ao topo-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
+    <a
+      id="botão-voltar"
+      href="#inicio"
+      title="Voltar para o início"
+      draggable="false"
+    >
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
@@ -415,7 +435,9 @@
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">  Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">
+        Vitorezy
+      </a>
     </footer>
   </body>
 </html>
