--- a/carrinho.html
+++ b/carrinho.html
@@ -31,7 +31,11 @@
     <header>
       <!--Logo-->
       <a href="Quem somos.html" draggable="false">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
+        <img
+          src="Imagens/logo sem fundo.png"
+          alt="Logo Tá que Tá"
+          draggable="false"
+        />
       </a>
       <!--Links de acesso para outras páginas-->
       <div class="links_acesso">
@@ -230,7 +234,11 @@
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
+          ><img
+            src="Imagens/inputNameIcon.png"
+            alt="Nome"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="text"
@@ -243,7 +251,11 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
+          <img
+            src="Imagens/senhaIcon.png"
+            alt="Senha"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="password"
@@ -287,7 +299,10 @@
           />
         </div>
         <ul id="requerimentos_login">
-          <li>O nome deve estar preenchido O nome deve estar preenchido e pode ter de 3 a 12 caractéres</li>
+          <li>
+            O nome deve estar preenchido O nome deve estar preenchido e pode ter
+            de 3 a 12 caractéres
+          </li>
           <li>
             A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
           </li>
@@ -413,7 +428,9 @@
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" draggable="false"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">
+        Vitorezy
+      </a>
     </footer>
   </body>
 </html>
