--- a/index.html
+++ b/index.html
@@ -147,12 +147,7 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input
-          type="checkbox"
-          name="btnLooney"
-          id="btnLooney"
-          checked
-        />
+        <input type="checkbox" name="btnLooney" id="btnLooney" checked />
         <label
           for="btnLooney"
           tabindex="1"
@@ -187,6 +182,7 @@
         <input class="checkbox_pecas" type="checkbox" id="check1" value="50" />
         <div
           class="peca_home colecao_marvel"
+          title="Clique para ver mais fotos!"
           style="background-image: url(Imagens/capit1.jfif)"
         >
           <div class="exibicao_hover_pecas">
@@ -214,8 +210,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check2" value="94" />
-        <div class="peca_home colecao_inverno"
-        style="background-image: url(Imagens/florz1.jfif)">
+        <div
+          class="peca_home colecao_inverno"
+          style="background-image: url(Imagens/florz1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check2">
               <img
@@ -241,8 +240,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check3" value="120" />
-        <div class="peca_home colecao_verao"
-        style="background-image: url(Imagens/blusa1.jfif)">>
+        <div
+          class="peca_home colecao_verao"
+          style="background-image: url(Imagens/blusa1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check3">
               <img
@@ -268,8 +270,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check4" value="14" />
-        <div class="peca_home colecao_verao"
-        style="background-image: url(Imagens/creed1.jfif)">>
+        <div
+          class="peca_home colecao_verao"
+          style="background-image: url(Imagens/creed1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check4">
               <img
@@ -295,8 +300,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check5" value="32" />
-        <div class="peca_home colecao_marvel"
-        style="background-image: url(Imagens/deadp1.jfif)">>
+        <div
+          class="peca_home colecao_marvel"
+          style="background-image: url(Imagens/deadp1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check5">
               <img
@@ -322,8 +330,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check6" value="30" />
-        <div class="peca_home colecao_marvel"
-        style="background-image: url(Imagens/gwenz1.jfif)">>
+        <div
+          class="peca_home colecao_marvel"
+          style="background-image: url(Imagens/gwenz1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check6">
               <img
@@ -349,8 +360,11 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check7" value="25" />
-        <div class="peca_home colecao_Looney"
-        style="background-image: url(Imagens/lolaz1.jfif)">>
+        <div
+          class="peca_home colecao_Looney"
+          style="background-image: url(Imagens/lolaz1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check7">
               <img
@@ -375,14 +389,12 @@
             />
           </div>
         </div>
-        <input
-          class="checkbox_pecas"
-          type="checkbox"
-          id="check8"
-          value="25"
-        />
-        <div class="peca_home colecao_Looney"
-        style="background-image: url(Imagens/perna1.jfif)">>
+        <input class="checkbox_pecas" type="checkbox" id="check8" value="25" />
+        <div
+          class="peca_home colecao_Looney"
+          style="background-image: url(Imagens/perna1.jfif)"
+          title="Clique para ver mais fotos!"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check8">
               <img
@@ -408,8 +420,7 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check9" value="44" />
-        <div class="peca_home colecao_afro"
-        >
+        <div class="peca_home colecao_afro" title="Clique para ver mais fotos!">
           <div class="exibicao_hover_pecas">
             <label for="check9">
               <img
@@ -435,7 +446,7 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check10" value="30" />
-        <div class="peca_home colecao_afro">
+        <div class="peca_home colecao_afro" title="Clique para ver mais fotos!">
           <div class="exibicao_hover_pecas">
             <label for="check10">
               <img
@@ -472,10 +483,18 @@
         draggable="false"
       />
       <div class="botaomudarimagem" id="botaovoltarimagem">
-        <img src="Imagens/seta_esquerda.png" alt="voltar uma imagem" draggable="false"/>
+        <img
+          src="Imagens/seta_esquerda.png"
+          alt="voltar uma imagem"
+          draggable="false"
+        />
       </div>
       <div class="botaomudarimagem" id="botaoproximaimagem">
-        <img src="Imagens/seta_direita.png" alt="Próxima imagem" draggable="false"/>
+        <img
+          src="Imagens/seta_direita.png"
+          alt="Próxima imagem"
+          draggable="false"
+        />
       </div>
     </div>
     <!--Página de login-->
